--- a/scss/_theming.scss
+++ b/scss/_theming.scss
@@ -14,7 +14,7 @@ $heading-color-base:    #202020;
 // Font, line-height, and color for body text, headings, and more.
 $font-family-base: "Montserrat", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
 $font-secondary: "Muli", 'Verdana', 'Avenir', 'Tahoma', sans-serif;
-$font-zh: "Muli", 'Verdana', 'Avenir', "Noto Serif TC", 宋体, SimSun, sans-serif;
+$font-zh: "Montserrat", 'Verdana', 'Avenir', "Noto Serif SC", 宋体, SimSun, sans-serif;
 
 $font-size-base:    1rem;
 $font-size-lg:      ($font-size-base * 1.125);
