--- a/scss/homenet/_homenet-type.scss
+++ b/scss/homenet/_homenet-type.scss
@@ -2,10 +2,14 @@
 // Text Block
 //
 
-p {
+body p {
   font-family: $font-secondary;
   font-weight: $font-weight-400;
   letter-spacing: 0.01px;
+}
+
+body.zh p {
+  font-family: $font-zh;
 }
 
 //
