--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -70,7 +70,7 @@
   background-color: $color;
 
   @if $enable-shadows-theming {
-    box-shadow: "#{$size-front} rgba($color, $opacity-front)", "#{$size-mid} rgba($black, $opacity-mid)", "#{$size-back} rgba($black, $opacity-back)";
+    box-shadow: 0 12px 35px -10px rgba(189, 195, 199, 0.55), 0 8px 10px -5px rgba(0, 0, 0, 0.09), 0 4px 25px -2px rgba(0, 0, 0, 0.14);
   } @else {
     box-shadow: none;
   }
